# data-describe

./: .gitignore  mkdocs.yml  pyproject.toml
data_describe/: data_describe.py  main.py  plot.py  utils.py
docs/: index.md
