[tool.poetry]
name = "data-describe"
version = "0.1.0"
description = ""
authors = ["Gustavo Suto <guyrux@gmail.com>"]
readme = "README.md"
packages = [{include = "data_describe"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
