[tool.poetry]
name = "data-describe"
version = "0.1.0"
description = ""
authors = ["Gustavo Suto <guyrux@gmail.com>"]
readme = "README.md"
packages = [{include = "data_describe"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "<5.0"
blue = "^0.9.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
ipykernel = "^6.25.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 79

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.html]
directory = "docs/htmlcov/"

[tool.taskipy.tasks]
lint = "blue --check --diff data_describe/ && isort --check --diff data_describe/"
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=data_describe -vv"
post_test = "coverage html"
